Check |last_open_profiles| lock stataus during startup.

Only open the profiles in |last_open_profiles| that are not locked.
Show UserManager if all profiles are locked.

Bug: 759584
Change-Id: Idae015b88e8280e877143ba6a7eab5930acc4d4d